outputs/condor.error
Could not find conda environment: 573-project
You can list all discoverable environments with `conda info --envs`.

  File "src/ensemble.py", line 23
    def __init__(self, roberta_config_path: str, forest_config_path: str, logreg_config_path: str) -> None:
                                          ^
SyntaxError: invalid syntax
